added 7 new widgets! >3 and wanna add more features

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <!--? End Head -->
 
         <h1 class="p-relative">Dashboard</h1>
+        <!--! Start Weapper -->
         <div class="wrapper d-grid gap-20">
           <!--! Welcome Widget -->
           <div
@@ -416,9 +417,335 @@
               ></i>
             </div>
           </div>
+          <!--* End Latest Tasks -->
+          <!--! Start topSearch -->
+          <div class="topSearch p-20 over-hidden rad-15 bg-orange">
+            <h2 class="text-cp">top search items</h2>
+            <div class="topItem d-flex dflex-between">
+              <p class="text-cp c-grey f-bold">keyword</p>
+              <p class="text-cp c-grey f-bold">search count</p>
+            </div>
+            <div class="item d-flex dflex-between">
+              <p class="text-cp f-bold">python</p>
+              <p class="text-cp bg-grey rad-20 p-10 f-bold">55</p>
+            </div>
+            <div class="item d-flex dflex-between">
+              <p class="text-cp f-bold">javascript</p>
+              <p class="text-cp bg-grey rad-20 p-10 f-bold">90</p>
+            </div>
+            <div class="item d-flex dflex-between">
+              <p class="text-cp f-bold">html</p>
+              <p class="text-cp bg-grey rad-20 p-10 f-bold">80</p>
+            </div>
+            <div class="item d-flex dflex-between">
+              <p class="text-cp f-bold">css</p>
+              <p class="text-cp bg-grey rad-20 p-10 f-bold">70</p>
+            </div>
+            <div class="item d-flex dflex-between">
+              <p class="text-cp f-bold">React</p>
+              <p class="text-cp bg-grey rad-20 p-10 f-bold">98</p>
+            </div>
+            <div class="item d-flex dflex-between">
+              <p class="text-cp f-bold">Tailwind</p>
+              <p class="text-cp bg-grey rad-20 p-10 f-bold">54</p>
+            </div>
+          </div>
+          <!--! End topSearch -->
+          <!--? Start Latest Uploads -->
+          <div class="latestUpload bg-white p-20 over-hidden rad-15">
+            <h2>Latest Uploads</h2>
+            <div class="item d-flex align-center">
+              <div>
+                <img src="./imgs/pdf.svg" alt="pdf" class="rad-15 mr-20" />
+              </div>
+              <div class="info">
+                <p class="text-cp d-block">my-file.pdf</p>
+                <p class="text-cp mt-n10 c-grey">Farouk</p>
+              </div>
+              <div class="c-grey bg-eee rad-15 p-5 size">
+                <span>2.9MB</span>
+              </div>
+            </div>
+
+            <div class="item d-flex align-center">
+              <div>
+                <img src="./imgs/avi.svg" alt="pdf" class="rad-15 mr-20" />
+              </div>
+              <div class="info">
+                <p class="text-cp d-block">my-file2.avi</p>
+                <p class="text-cp mt-n10 c-grey">Karim</p>
+              </div>
+              <div class="c-grey bg-eee rad-15 p-5 size">
+                <span>3.9MB</span>
+              </div>
+            </div>
+
+            <div class="item d-flex align-center">
+              <div>
+                <img src="./imgs/psd.svg" alt="pdf" class="rad-15 mr-20" />
+              </div>
+              <div class="info">
+                <p class="text-cp d-block">my-file.psd</p>
+                <p class="text-cp mt-n10 c-grey">Rabea</p>
+              </div>
+              <div class="c-grey bg-eee rad-15 p-5 size">
+                <span>9.9MB</span>
+              </div>
+            </div>
+
+            <div class="item d-flex align-center">
+              <div>
+                <img src="./imgs/zip.svg" alt="pdf" class="rad-15 mr-20" />
+              </div>
+              <div class="info">
+                <p class="text-cp d-block">my-file.zip</p>
+                <p class="text-cp mt-n10 c-grey">Marwan</p>
+              </div>
+              <div class="c-grey bg-eee rad-15 p-5 size">
+                <span>1.9MB</span>
+              </div>
+            </div>
+
+            <div class="item d-flex align-center">
+              <div>
+                <img src="./imgs/dll.svg" alt="pdf" class="rad-15 mr-20" />
+              </div>
+              <div class="info">
+                <p class="text-cp d-block">my-file.dll</p>
+                <p class="text-cp mt-n10 c-grey">Aya</p>
+              </div>
+              <div class="c-grey bg-eee rad-15 p-5 size">
+                <span>1TB</span>
+              </div>
+            </div>
+
+            <div class="item d-flex align-center">
+              <div>
+                <img src="./imgs/eps.svg" alt="pdf" class="rad-15 mr-20" />
+              </div>
+              <div class="info">
+                <p class="text-cp d-block">my-file.eps</p>
+                <p class="text-cp mt-n10 c-grey">Ragab</p>
+              </div>
+              <div class="c-grey bg-eee rad-15 p-5 size">
+                <span>4.6MB</span>
+              </div>
+            </div>
+          </div>
+          <!--? End Latest Uploads -->
+
+          <!--* Start Last Projects -->
+          <div class="last-project bg-white p-20 over-hidden rad-15 p-relative">
+            <h2 class="text-cp">last project progress</h2>
+            <div class="p-relative circle ml-15">
+              <p class="d-flex align-center mt-30 done text-cp f-bold ml-20">
+                got the project
+              </p>
+              <p class="d-flex align-center mt-30 done text-cp f-bold ml-20">
+                started the project
+              </p>
+              <p class="d-flex align-center mt-30 done text-cp f-bold ml-20">
+                the project is about to finish
+              </p>
+              <p class="d-flex align-center mt-30 current text-cp f-bold ml-20">
+                test the project
+              </p>
+              <p class="d-flex align-center mt-30 text-cp f-bold ml-20 undone">
+                finish the project & get the money
+              </p>
+            </div>
+            <img src="./imgs/project.png" alt="rocket" />
+          </div>
+          <!--* End Last Projects -->
+
+          <!--! Start Reminders -->
+          <div class="reminder bg-eee p-20 over-hidden rad-15 p-relative">
+            <h2>Reminders</h2>
+            <div class="alarm ml-30 p-relative">
+              <p class="text-cp f-bold">check my tasks list</p>
+              <span class="c-grey fs-12">28/09/2022 - 12:00am</span>
+            </div> 
+            <div class="alarm2 ml-30 p-relative">
+              <p class="text-cp f-bold">check my projects</p>
+              <span class="c-grey fs-12">28/10/2023 - 12:00am</span>
+            </div> 
+            <div class="alarm3 ml-30 p-relative">
+              <p class="text-cp f-bold">call my clients</p>
+              <span class="c-grey fs-12">28/09/2024 - 12:00am</span>
+            </div> 
+            <div class="alarm4 ml-30 p-relative">
+              <p class="text-cp f-bold">finish the development workshop</p>
+              <span class="c-grey fs-12">28/05/2024 - 12:00am</span>
+            </div> 
+          </div>
+          <!--! End Reminders -->
+
+          <!--? Start Latest Post -->
+          <div class="post p-20 bg-dark-red rad-15 over-hidden">
+            <h2 class="text-cp c-white">latest post</h2>
+            <div>
+              <div class="info d-flex align-center mb-20">
+                <img src="./imgs/profile-pic (4).png" alt="profile Picture" class="w-15p">
+                <div class="about ml-10">
+                <h3 class="text-cp f-bold c-white">Farouk Khaled</h3>
+                <p class="text-cp c-grey f-bold fs-14 mt-n10">just now</p>  
+                </div>
+                
+            </div>
+            <div class="title fs-14 f-bold c-orange">
+              🕊️ From Occupation to Liberation:
+The call for a free Palestine is a call for justice and freedom—a plea for an end to occupation and a step towards a future where peace reigns supreme. The international community plays a crucial role in championing the cause, fostering dialogue, and working towards a just solution
+            </div>
+            <div class="action dflex-between d-flex">
+              <div>
+               <i class="fa-regular fa-heart c-white"></i>
+               <span class="c-grey f-bold fs-14">1M</span> 
+              </div>
+              <div>
+                <i class="fa-regular fa-comments c-white"></i>
+                <span class="c-grey f-bold fs-14">120K</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <!--* End Latest Tasks -->
-      </div>
+          <!--? End Latest Post -->
+
+          <!--! Start Social Media Stats -->
+          <div class="sm-stat bg-white p-20 over-hidden rad-15">
+            <h2 class="text-cp">social media stats</h2>
+            <div class="box d-flex dflex-between p-relative">
+              <i class="fa-brands fa-twitter fa-2x c-white  twitter text-c"></i>
+              <span class="fs-14 f-bold">1M Followers</span>            
+            <a href="https://farouqkhaled17.github.io/Twitter-Clone/" class="text-c mr-20 tw-btn">Follow</a>
+            </div>
+            <div class="box2 d-flex dflex-between p-relative">
+              <i class="fa-brands fa-facebook fa-2x c-white  facebook text-c"></i>
+              <span class="fs-14 f-bold">4M Followers</span>            
+            <a href="facebook.com" class="text-c mr-20 fb-btn">Like</a>
+            </div>
+            <div class="box3 d-flex dflex-between p-relative">
+              <i class="fa-brands fa-youtube fa-2x c-white  youtube text-c"></i>
+              <span class="fs-14 f-bold">15M Subscribers</span>            
+            <a href="youtube.com" class="text-c mr-20 yt-btn">Subscribe</a>
+            </div>
+            <div class="box4 d-flex dflex-between p-relative">
+              <i class="fa-brands fa-linkedin fa-2x c-white  linkedin text-c"></i>
+              <span class="fs-14 f-bold">7M Connections</span>            
+            <a href="linkedin.com" class="text-c mr-20 lin-btn">Connect</a>
+            </div>
+          </div>
+          <!--! End Social Media Stats -->
+          <!--! End Wrapper -->
+        </div>
+        <!--? Start Table -->
+        <div class="project bg-white p-20 over-hidden rad-15">
+          <h2 class="text-cp">projects</h2>
+          <div class="table fs-16 ">
+           <table class="w-full">
+            <thead>
+              <tr>
+                <td class="text-cp f-bold">name</td>
+                <td class="text-cp f-bold">finish data</td>
+                <td class="text-cp f-bold">client</td>
+                <td class="text-cp f-bold">price</td>
+                <td class="text-cp f-bold">team</td>
+                <td class="text-cp f-bold">status</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Ministry Wikipedia</td>
+                <td>10 May 2022</td>
+                <td>Ministry</td>
+                <td>5300$</td>
+                <td>
+                  <img src="./imgs/team-01.png" alt="">
+                  <img src="./imgs/team-02.png" alt="">
+                  <img src="./imgs/team-03.png" alt="">
+                  <img src="./imgs/team-04.png" alt="">
+                </td>
+                <td>
+                  <span class="label fs-14 bg-orange c-white rad-20 p-5">pending</span>
+                </td>
+              </tr>
+            </tbody>
+
+            <tbody>
+              <tr>
+                <td>Farouk Khlaed</td>
+                <td>21 Jan 2024</td>
+                <td>Faculty</td>
+                <td>5330$</td>
+                <td>
+                  <img src="./imgs/team-01.png" alt="">
+                  <img src="./imgs/team-02.png" alt="">
+                  <img src="./imgs/team-03.png" alt="">
+                  <img src="./imgs/team-04.png" alt="">
+                </td>
+                <td>
+                  <span class="label fs-14 bg-green c-white rad-20 p-5">Completed</span>
+                </td>
+              </tr>
+            </tbody>
+
+            <tbody>
+              <tr>
+                <td>Karim Mohamed</td>
+                <td>10 May 2023</td>
+                <td>Faculty</td>
+                <td>53300$</td>
+                <td>
+                  <img src="./imgs/team-01.png" alt="">
+                  <img src="./imgs/team-02.png" alt="">
+                  <img src="./imgs/team-03.png" alt="">
+                  <img src="./imgs/team-04.png" alt="">
+                </td>
+                <td>
+                  <span class="label fs-14 bg-green c-white rad-20 p-5">Completed</span>
+                </td>
+              </tr>
+            </tbody>
+
+            <tbody>
+              <tr>
+                <td>Rabea Zarzora</td>
+                <td>10 May 2024</td>
+                <td>Faculty</td>
+                <td>5M$</td>
+                <td>
+                  <img src="./imgs/team-01.png" alt="">
+                  <img src="./imgs/team-02.png" alt="">
+                  <img src="./imgs/team-03.png" alt="">
+                  <img src="./imgs/team-04.png" alt="">
+                </td>
+                <td>
+                  <span class="label fs-14 bg-red c-white rad-20 p-5">Rejected</span>
+                </td>
+              </tr>
+            </tbody>
+
+            <tbody>
+              <tr>
+                <td>Marwan Karwan</td>
+                <td>14 June 2020</td>
+                <td>Fayoum</td>
+                <td>6542$</td>
+                <td>
+                  <img src="./imgs/team-01.png" alt="">
+                  <img src="./imgs/team-02.png" alt="">
+                  <img src="./imgs/team-03.png" alt="">
+                  <img src="./imgs/team-04.png" alt="">
+                </td>
+                <td>
+                  <span class="label fs-14 bg-orange c-white rad-20 p-5">pending</span>
+                </td>
+              </tr>
+            </tbody>
+          </table> 
+          </div>
+          
+        </div>
+        <!--? End Table -->
     </div>
   </body>
 </html>
