--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul>
           <li>
             <a
-              href="index.html"
+              href="settings.html"
               class="d-flex align-center fs-14 c-black rad-6 p-10"
             >
               <i class="fa-solid fa-gear fa-fw"></i>
